--- a/resources/public/cmsnew.html
+++ b/resources/public/cmsnew.html
@@ -2,6 +2,7 @@
   <head>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/underscore.js" type="text/javascript"></script>
+    <script src="js/showdown.js" type="text/javascript"></script>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/cmsnew.css" rel="stylesheet" type="text/css">
   </head>
