--- a/resources/public/cmsnew.html
+++ b/resources/public/cmsnew.html
@@ -4,7 +4,10 @@
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/underscore.js" type="text/javascript"></script>
     <script src="js/showdown.js" type="text/javascript"></script>
-    <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,700" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,700"
+          rel="stylesheet" type="text/css">
+    <!-- <link href="http://fonts.googleapis.com/css?family=Merriweather:400,700,300,400italic,300italic,700italic"
+    rel="stylesheet" type="text/css"> -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"
           type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -16,7 +19,7 @@
     <div id="cmsnew">
 
     </div>
-
+    <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/compiled/cmsnew.js" type="text/javascript"></script>
   </body>
 </html>
