--- a/resources/public/cmsnew.html
+++ b/resources/public/cmsnew.html
@@ -4,6 +4,7 @@
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/underscore.js" type="text/javascript"></script>
     <script src="js/showdown.js" type="text/javascript"></script>
+    <script src="https://login.persona.org/include.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,700"
           rel="stylesheet" type="text/css">
     <!-- <link href="http://fonts.googleapis.com/css?family=Merriweather:400,700,300,400italic,300italic,700italic"
@@ -17,7 +18,7 @@
   </head>
   <body ondragstart="return false;" ondrop="return false;">
     <div id="cmsnew">
-
+      
     </div>
     <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/compiled/cmsnew.js" type="text/javascript"></script>
