--- a/resources/public/cmsnew.html
+++ b/resources/public/cmsnew.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="js/react_with_addons_0.8.0.js"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/underscore.js" type="text/javascript"></script>
     <script src="js/showdown.js" type="text/javascript"></script>
