making some compiling changes

--- a/resources/public/cmsnew.html
+++ b/resources/public/cmsnew.html
@@ -21,7 +21,13 @@
     <div id="cmsnew">
       
     </div>
-    <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+
+    <script src="js/compiled/out/goog/base.js" type="text/javascript"></script>
     <script src="js/compiled/cmsnew.js" type="text/javascript"></script>
+    <script type="text/javascript">goog.require("cmsnew.core");</script>
+
+   <!-- <script src="bootstrap/js/bootstrap.min.js" --
+     -- type="text/javascript"></script> -->
+
   </body>
 </html>
