--- a/resources/public/test.html
+++ b/resources/public/test.html
@@ -5,7 +5,6 @@
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/underscore.js" type="text/javascript"></script>
     <script src="js/showdown.js" type="text/javascript"></script>
-    <script src="js/json_renderer.js" type="text/javascript"></script>
 
 <!--    <script src="https://login.persona.org/include.js"></script> 
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,700"
@@ -19,7 +18,7 @@
     <!-- <meta name="viewport" content="width=device-width, --
       -- initial-scale=1.0"> -->
     <link href="css/cmsnew.css" rel="stylesheet" type="text/css">
-    <link href="css/json_renderer.css" rel="stylesheet" type="text/css">
+    <link href="css/rendered_edn.css" rel="stylesheet" type="text/css">
 
   </head>
   <body ondragstart="return false;" ondrop="return false;">
@@ -31,8 +30,7 @@
     <script src="js/compiled/cmsnew.js" type="text/javascript"></script>
     <script type="text/javascript">goog.require("cmsnew.core");</script>
 
-   <!-- <script src="bootstrap/js/bootstrap.min.js" --
-     -- type="text/javascript"></script> -->
+    <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 
   </body>
 </html>
