--- a/resources/public/test.html
+++ b/resources/public/test.html
@@ -6,23 +6,21 @@
     <script src="js/underscore.js" type="text/javascript"></script>
     <script src="js/showdown.js" type="text/javascript"></script>
 
-<!--    <script src="https://login.persona.org/include.js"></script> 
-    <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,700"
-          rel="stylesheet" type="text/css"> -->
 
     <!-- <link href="http://fonts.googleapis.com/css?family=Merriweather:400,700,300,400italic,300italic,700italic"
     rel="stylesheet" type="text/css"> -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"
-          type="text/css">
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <!-- <meta name="viewport" content="width=device-width, --
-      -- initial-scale=1.0"> -->
+
     <link href="css/cmsnew.css" rel="stylesheet" type="text/css">
     <link href="css/rendered_edn.css" rel="stylesheet" type="text/css">
-
   </head>
-  <body ondragstart="return false;" ondrop="return false;">
+  <body>
     <div id="cmsnew">
+      
+    </div>
+
+    <div id="devcards">
       
     </div>
 
